--- a/src/Alura.SubastaOnline.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/Alura.SubastaOnline.WebApp/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted bg-white text-center">
         <div class="container">
-            SOLID &copy; 2023 - Alura Latam
+            SOLID &copy; 2020 - Daniel Portugal
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
